[package]
name = "arpg"
version = "0.1.0"
publish = false
authors = ["The Wozard"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
features = ["bevy/bevy_dylib"]

[profile.release]
lto = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
bevy = "0.11"
bevy_egui = "0.21"
# bevy_ecs_tilemap = "0.10"
# bevy_tweening = "0.8.0"
bevy_asset_loader = { version = "0.17" }
bevy_embedded_assets = "0.8.0"
bevy-inspector-egui = "0.19.0"

rand = { version = "0.8.3" }

[[example]]
name = "test"
path = "src/test.rs"

